--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,7 @@
 @media (max-width: 181px) {
   body{
     margin: 0 0.2em;
-    background-image: url("/assets/img/47245.png");
+    background-image: url("../assets/img/47245.png");
     background-size: 32px 32px; 
     height: 100%;
     display: flex;
@@ -24,7 +24,7 @@
 @media (min-width: 182px) and (max-width: 360px) {
   body{
     margin: 0 0.2em;
-    background-image: url("/assets/img/47245.png");
+    background-image: url("../assets/img/47245.png");
     background-size: 32px 32px;  
 
     height: 100%;
@@ -37,7 +37,7 @@
 @media (min-width: 361px){
   body{
     margin: 0 0.2em;
-    background-image: url("/assets/img/47245.png");
+    background-image: url("../assets/img/47245.png");
     background-size: 32px 32px;  
   
     height: 100%;
